api/static/styles.css
/* ... */
.statistics-button {
    aspect-ratio: 1;
    width: 3.5rem;
    height: 3.5rem;
    flex-shrink: 0;
    display: flex;
    justify-content: center;
    align-items: center;
}

.statistics-button svg {
    width: 2rem;
    height: 2rem;
    fill: var(--lightgrey);
}

.navigation > .marker {
    background-color: var(--lightgrey);
    height: 3.5em;
    width: 5px;
    position: absolute;
    top: 0px;
    left: 0;
}

.checkout-column h2 {
    font-size: 1.125rem;
}

.checkout-column > .options {
    display: grid;
    gap: .5rem;
    grid-template-columns: 1fr;
    grid-auto-rows: 1fr;
}

.checkout-column h2 {
    margin-bottom: 0;
    margin-right: auto;
}

.checkout-column > .options > div {
    background-color: var(--grey1);
    border-radius: 1rem;
    padding: 1rem;
    display: flex;
    justify-content: flex-end;
    align-items: center;
    gap: 1rem;
    user-select: none;
    flex-wrap: wrap;
    container-type: inline-size;
}

.row-header {
    display: flex;
    align-items: center;
    flex: 1;
}

@container (max-width: 340px) {
    .row-header {
        flex: 1 0 100%;
    }

    .checkout-column > .options > div {
        justify-content: center;
    }
}

.total-price {
    font-size: 1.125rem;
}


.row-price {
    font-size: 1.125rem;
    color: var(--lightgrey);
    white-space: nowrap;
}

.quantity-button {
    font-size: 1.5rem;
    cursor: pointer;
    padding: .5rem;
    border-radius: .5rem;
    width: 2em;
    height: 2em;
    display: flex;
    justify-content: center;
    align-items: center;
}

.decrease:hover, .increase:hover {
    background-color: var(--grey2);
}

.tab-column {
    display: flex;
    background-color: var(--grey1);
    border-radius: 1rem;
    margin-right: 0;
    flex-direction: column;
    overflow: hidden;
}

.tab-column > h2 {
    padding: 1rem;
    border-radius: 1rem;
    margin: 0;
}

.tab-list {
    padding-left: 1rem;
    padding-right: 1rem;
    overflow-y: auto;
    flex: 1 1 auto;
}

.tab-list h3 {
    margin-bottom: .5rem;
}

.alphabet-container {
    min-height: 100%;
    flex-shrink: 0;
    display: flex;
    justify-content: space-between;
    flex-direction: column;
}

#session-tab-list .alphabet-container {
    min-height: min(80vh, 35rem); /* 100% breaks MobileSafari  */
}

.alphabet {
    display: grid;
    gap: .5rem;
    grid-template-columns: repeat(10, 1fr);
    margin-bottom: 1rem;
}


.alphabet-container h3 {
    margin-top: auto;
}

.alphabet > div {
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 1.5rem;
    cursor: pointer;
    padding: .5rem;
    border-radius: .5rem;
}

.alphabet > div:hover {
    background-color: var(--grey2);
}

.alphabet > div.disabled {
    background-color: transparent;
    cursor: default;
    color: var(--grey2);
}

.tab-list {
    display: flex;
    flex-direction: column;
}

.tabs, .tab-list .suggestions {
    display: grid;
    flex-direction: column;
    gap: .5rem;
    padding: 0;
    grid-template-columns: 1fr 1fr;
    padding-bottom: 1rem;
}

.tabs > div, .tab-list .suggestions > div {
    padding: 1rem;
    border-radius: .5rem;
    background-color: var(--grey2);
    margin: 0;
    cursor: pointer;
    user-select: none;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
    transition: background-color .2s, color .2s;
}

.tabs > div.blink {
    background-color: var(--grey3);
}

.products > div.selected, .quick-payment.selected {
    transition: background-color .2s, color .2s;
    background-color: var(--lightgrey);
    color: #000;
}

.tabs > div.selected, .tab-list .suggestions > div.selected {
    background-color: var(--lightgrey);
    color: #000;
}

#price-choice {
    border-radius: .5rem;
    width: 300px;
    background-color: var(--grey2);
    white-space: nowrap;
}

#single-price {
    font-size: 1.125rem;
}

.radio-custom {
  box-sizing: border-box;
  display: block;
  border-radius: .5rem;
  float: left;
  font-weight: 200;
  width: 50%;
  text-align: center;
  text-transform: initial;
  padding: .5em 1em;
  transition: background-color 0.2s, color 0.2s;
}
.radio-custom:first-of-type {
  margin-left: 0;
}
.radio-custom:hover {
  cursor: pointer;
}

input[type=radio] {
  display: none;
}

input[type=radio]:checked + label {
  background-color: var(--lightgrey);
  color: #000;
}

.confirmation {
    margin-top: auto;
    border-radius: 1rem;
    font-size: 1.125rem;
    align-self: last baseline;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    white-space: nowrap;
    margin-left: auto;
    background-color: var(--grey1);
    max-width: 100%;
}

.confirmation .summary {
    display: flex;
    flex-direction: row;
    overflow: hidden;
}

.confirmation .summary > div:first-of-type {
    margin-left: 1rem;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
}

.confirmation .summary > div {
    margin-right: 1rem;
}

.button {
    position: relative;
    padding: 1rem 2rem;
    font-size: 1rem;
    background-color: var(--lightgrey);
    color: #000;
    border-radius: 1rem;
    user-select: none;
    cursor: pointer;
}

.confirmation > .button.disabled, .button.disabled {
    background-color: var(--grey2);
    color: var(--grey3);
    cursor: default;
}

.slider-container {
    width: 100%;
    position: relative;
}

.slider-container > span {
    display: block;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

/* The slider itself */
.slider {
    -webkit-appearance: none;
    appearance: none;
    display: block;
    width: 100%;
    height: 4rem;
    padding: .5rem;
    background: #d3d3d3;
    outline: none;
    border-radius: 1rem;
    background-color: var(--grey1);
    pointer-events: none;
  }

  .slider::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
  }
/* ... */

